--- a/player.html
+++ b/player.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Photography Project</title>
     <style>
-        body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; }
-        .header { background: #333; color: white; padding: 1em; text-align: center; }
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; margin: 0; background-color: #f4f4f4; }
+        .header { background: #333; color: white; padding: 1.5em; text-align: center; }
         .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1em; padding: 1em; }
-        .gallery img { width: 100%; height: auto; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        .gallery img { width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
         .drive-link-container { text-align: center; padding: 2em; }
-        .drive-link-button { padding: 1em 2em; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; }
+        .drive-link-button { padding: 1em 2em; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; font-size: 1.1em; }
         .drive-link-button:hover { background-color: #0056b3; }
+        .hidden { display: none; }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <h1 id="project-title"></h1>
+        <h1 id="project-title">Loading Project...</h1>
     </div>
 
     <div class="gallery" id="image-gallery">
         <!-- Images will be loaded here -->
     </div>
 
-    <div class="drive-link-container">
+    <div id="drive-btn-container" class="drive-link-container hidden">
         <a id="drive-link" href="#" class="drive-link-button" target="_blank">View on Google Drive</a>
     </div>
 
@@ -57,9 +58,14 @@
                     if (doc.exists) {
                         const project = doc.data();
                         document.getElementById('project-title').innerText = project.name;
-                        document.getElementById('drive-link').href = project.driveLink;
+                        
+                        if (project.driveLink) {
+                            document.getElementById('drive-link').href = project.driveLink;
+                            document.getElementById('drive-btn-container').classList.remove('hidden');
+                        }
 
                         const gallery = document.getElementById('image-gallery');
+                        gallery.innerHTML = '';
                         project.images.forEach(imageUrl => {
                             const img = document.createElement('img');
                             img.src = imageUrl;
@@ -72,6 +78,8 @@
                     console.error("Error getting document:", error);
                     document.getElementById('project-title').innerText = "Error loading project.";
                 });
+            } else {
+                 document.getElementById('project-title').innerText = "No project specified.";
             }
         };
     </script>
